--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/analytics": "^21.4.1",
     "@react-native-firebase/app": "^21.4.0",
     "@react-native-firebase/auth": "^21.4.0",
+    "@react-native-firebase/dynamic-links": "^21.4.0",
     "@react-navigation/bottom-tabs": "^7.0.1",
     "@react-navigation/elements": "^2.0.0",
     "@react-navigation/native": "^7.0.0",
